/* Copyright (C) 2020 Nemirtingas
   This file is part of the Nemirtingas's Epic Emulator

   The Nemirtingas's Epic Emulator is free software; you can redistribute it and/or
   modify it under the terms of the GNU Lesser General Public
   License as published by the Free Software Foundation; either
   version 3 of the License, or (at your option) any later version.

   The Nemirtingas's Epic Emulator is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
   Lesser General Public License for more details.

   You should have received a copy of the GNU Lesser General Public
   License along with the Nemirtingas's Epic Emulator; if not, see
   <http://www.gnu.org/licenses/>.  */

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

//////////////////////////////////////////////////////////////////////////
//                          Presence messages                           //
//////////////////////////////////////////////////////////////////////////
message Presence_Info_Request_pb {

}

message Presence_Info_pb {
    int32  status = 1;
    string productid = 2;
    string productversion = 3;
    string platform = 4;
    string richtext = 5;
    map<string, string> records = 6;
    string productname = 7;
    string joininfo = 8;
}

// Base Presence related message
message Presence_Message_pb {
    oneof message {
        Presence_Info_Request_pb  presence_info_request = 1;
        Presence_Info_pb presence_info = 2;
	}
}

//////////////////////////////////////////////////////////////////////////
//                         UserInfo messages                            //
//////////////////////////////////////////////////////////////////////////
message UserInfo_Info_Request_pb {

}

message UserInfo_Info_pb {
	string country = 1;
	string displayname = 2;
	string preferredlanguage = 3;
	string nickname = 4;
}

// Base Friends related message
message UserInfo_Message_pb {
    oneof message {
        UserInfo_Info_Request_pb userinfo_info_request = 1;
        UserInfo_Info_pb userinfo_info = 2;
	}
}

//////////////////////////////////////////////////////////////////////////
//                          Friends messages                            //
//////////////////////////////////////////////////////////////////////////
// Base Friends related message
message Friends_Message_pb {

}

// Network base message
message Network_Message_pb {
    string source_id = 1;
    string dest_id = 2;
	string gameid = 3;
    oneof messages {
		Friends_Message_pb friends = 4;
        Presence_Message_pb presence = 5;
        UserInfo_Message_pb userinfo = 6;
    }
}
